# BoardBuilder

./: .gitignore
backend/: Cargo.toml  _ci.sh  _setup.sh
backend/src/: lib.rs  main.rs
requirements/: user_stories.md
